--- a/Top_summary.html
+++ b/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/17/2016 - 15:14:15)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/17/2016 - 15:18:03)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VGA_w_Dispatch2.xise</TD>
@@ -13,20 +13,19 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>Top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Bitgen Completed (Failed)</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
-<font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Error'>27 Errors (27 new)</A></TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>85 Warnings (72 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>57 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -205,14 +204,14 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>25</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>16%</TD>
+<TD ALIGN=RIGHT>10%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>38</TD>
-<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>25</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -392,22 +391,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:05 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>42 Warnings (38 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:13 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Warning'>13 Warnings (13 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (2 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:02 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Warning'>30 Warnings (21 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:16:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>42 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:16:53 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:17:29 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:17:42 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Warning'>15 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:08 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:14 2016</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/bitgen.xmsgs?&DataKey=Error'>27 Errors (27 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:17:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:17:59 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:36:10 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:58:40 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:58:43 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Nov 17 15:18:00 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Nov 17 15:18:03 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/17/2016 - 15:14:15</center>
+<br><center><b>Date Generated:</b> 11/17/2016 - 15:18:03</center>
 </BODY></HTML>
